Bug#51023: Mysql server crashes on SIGHUP and destroys InnoDB files

WIN32 compilation fixes: define ETIMEDOUT only if not available and
fix typos and add a missing parameter.